<resources>
    <string name="app_name">Nine Crew</string>

    <!-- common -->
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy_Policy</string>

    <!-- activity_main -->
    <string name="wss_layout2">Why so serious ?</string>
    <string name="not_now_layout2">Not now</string>

    <!-- activity_login -->
    <string name="forgot_password_layout3">Forgot Password</string>

    <!-- activity_sign_up -->
    <string name="nickname_layout4">Name / Nickname</string>
    <string name="airline_base">Airline Base</string>

</resources>
