<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5">

            <Button
                android:id="@+id/fb_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_btn_width_common"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:background="@drawable/fb_button"
                android:text="@string/login_with_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/button_size_sign_up" />

            <TextView
                android:id="@+id/or_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fb_login_button"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:text="@string/or"
                android:textSize="@dimen/textview_size_sign_up" />

            <TextView
                android:id="@+id/nickname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/or_textview"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:text="@string/nickname_layout4"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_sign_up" />

            <EditText
                android:id="@+id/nickname_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_btn_width_common"
                android:layout_below="@+id/nickname_textview"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:textSize="@dimen/textview_size_sign_up" />

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/nickname_edt"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_sign_up" />

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_btn_width_common"
                android:layout_below="@+id/email_textview"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:textSize="@dimen/textview_size_sign_up" />

            <TextView
                android:id="@+id/airline_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/email_edt"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:text="@string/airline_base"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_sign_up" />

            <EditText
                android:id="@+id/airline_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_btn_width_common"
                android:layout_below="@+id/airline_textview"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:textSize="@dimen/textview_size_sign_up" />

            <TextView
                android:id="@+id/password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/airline_edt"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_sign_up" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_btn_width_common"
                android:layout_below="@+id/password_textview"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:textSize="@dimen/textview_size_sign_up" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_btn_width_common"
                android:layout_below="@+id/password_edt"
                android:layout_marginTop="@dimen/small_margin_sign_up"
                android:background="@color/cyan"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/button_size_login" />

            <LinearLayout
                android:id="@+id/terms_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_up_button"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_margin_main">

                <TextView
                    android:id="@+id/terms_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/silver"
                    android:textSize="@dimen/textview_size_main" />

                <TextView
                    android:id="@+id/privacy_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/silver"
                    android:textSize="@dimen/textview_size_main" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
